# dup-file-remover

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README_CN.md  build_dev.sh  build_docker.sh  update_static.sh  update_web_openapi.sh
docs/: USAGE_CN.md  USAGE_EN.md
nodejs/: .umirc.ts  package-lock.json  package.json
nodejs/src/layouts/: index.tsx
nodejs/src/pages/: config.tsx
src/: controller.rs  database.rs  lib.rs  main.rs  model.rs
src/controller/: files.rs  list.rs  login.rs  scan.rs  settings.rs  trash.rs  user.rs
src/database/: file_info.rs  sqlite.rs
src/model/: common.rs  files.rs  list.rs  login.rs  scan.rs  settings.rs  trash.rs  user.rs
src/utils/: error.rs  network.rs
tests/: test_file.rs  test_network.rs  test_sqlite.rs
web/: openapi.json  package-lock.json  package.json  pnpm-lock.yaml
web/config/: config.ts  defaultSettings.ts  openapi.json  proxy.ts  routes.ts
web/src/: app.tsx  requestErrorConfig.ts
web/src/components/: index.ts
web/src/components/Footer/: index.tsx
web/src/components/RightContent/: AvatarDropdown.tsx  index.tsx
web/src/locales/en-US/: menu.ts  pages.ts
web/src/locales/zh-CN/: menu.ts  pages.ts
web/src/pages/: Admin.tsx  Scan.tsx
web/src/pages/FileList/: index.tsx
web/src/pages/System/Settings/: index.tsx
web/src/pages/TableList/: index.tsx
web/src/pages/TrashList/: index.tsx
web/src/pages/User/Login/: index.tsx
web/src/pages/User/Settings/: index.tsx
web/src/services/dfr/: changePassword.ts  deleteFile.ts  deleteFiles.ts  deleteTrashFile.ts  deleteTrashFiles.ts  getCaptcha.ts  getCurrentUser.ts  getNotices.ts  index.ts  listFiles.ts  listTrashFiles.ts  loginAccount.ts  logoutAccount.ts  queryListSettings.ts  queryScanSettings.ts  queryScanStatus.ts  querySettings.ts  queryTrashListSettings.ts  restoreTrashFile.ts  restoreTrashFiles.ts  startScan.ts  stopScan.ts  typings.d.ts  updateSettings.ts
web/src/utils/: format_utils.ts
