[package]
name = "dup-file-remover"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = "4.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
env_logger = "0.11"
log = "0.4"
rusqlite = { version = "0.32", features = ["chrono", "bundled"] }
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"
r2d2_sqlite = "0.25"
r2d2 = "0.8"