[package]
name = "dup-file-remover"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = "4.9"
actix-server = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
env_logger = "0.11"
log = "0.4"
rusqlite = { version = "0.34", features = ["chrono", "bundled"] }
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"
r2d2_sqlite = "0.27"
r2d2 = "0.8"
tokio = { version = "1.43", features = ["full"] }
utoipa = { version = "5", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
utoipa-actix-web = "0.1"
utoipa-redoc = { version="6", features = ["actix-web"] }
utoipa-rapidoc = { version="6", features = ["actix-web"] }
utoipa-scalar = { version="0.3", features = ["actix-web"] }
config = { version="0.15", features = ["toml"]}
clap = {version = "4.5", features = ["derive"]}
actix-session = { version = "0.10", features = ["cookie-session"] }
toml_edit = {version = "0.22", features = ["serde"]}
toml = "0.8"
mime = "0.3"
